Finished my portfolio

--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-# my-portfolio
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nafis's Portfolio</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+</head>
+<body>
+    <section class="container-top-banner container-height">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-highlight">Nafis's</span> Portfolio</h1>
+            <h3>world-class professional web dev</h3>
+            <p>Hey, I am Nafis Iqbal. I am a professional web developer. I can design and develop a website. You can hire me for design and develop your website. I learn website development from Programming-Hero. </p>
+            <a href="https://github.com/Nafis-Iqbal2k20" class="link-button" target="_blank">Hire me </a>
+        </div>
+        <div class="half-width">
+            <img src="images/jhankar.png" alt="mypicture-for-top">
+        </div>
+    </section>
+    <section class="container-dream-big container-height">
+        <div class="half-width">
+            <img src="/images/jhankar2.png" alt="mypicture-for-dreambig">
+        </div>
+        <div class="half-width">
+            <h2>Dream Big</h2>
+            <h3>Will be a web dev pro</h3>
+            <p>I am already expert in basic HTML and CSS. I want to be a MERN and Full Stack developer. My present goal is compelete my web development course. Then make some pro website to add my upcoming Portfolio and learn advaced topics about Programming.</p>
+            <a href="https://github.com/Nafis-Iqbal2k20" class="link-button" target="_blank">Download my resume</a>
+        </div>
+    </section>
+    <section class="expriences-area expriences-pad-hei">
+        <h2>Expriences</h2>
+        <div class="half-width expriences-box" id="border-full">
+            <h2>Full stack web developer</h2>
+            <h3 class="orange-highlight">2021-Present | Pro level developer</h3>
+            <p>I am the master of HTML, CSS, Javascript. I make a website properly and efficiantly and also SEO friendly. I also know about ReactJs, ExpressJs,NodeJs and MongoDB. I know all about to be a MERN developer. I love this work. I want to work it professionally in future.</p>
+        </div>
+        <div class="half-width expriences-box" id="border-baby">
+            <h2>Baby web developer</h2>
+            <h3 class="orange-highlight">2020-2021 | Web development learner</h3>
+            <p>I was a learnr in 2020. I learnt HTML and CSS in 2020. I was a little web designer. I made some static website. I built my porfolio website. I also learnt about Git and Github. I learnt about Bootsrap for making my website responsive.</p>
+        </div>
+    </section>
+    <footer>
+        <p>&copy; Nafis Iqbal 2021 | all rights reserved.</p>
+    </footer>
+</body>
+</html>
