Finished my portfolio

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </section>
     <section class="container-dream-big container-height">
         <div class="half-width">
-            <img src="/images/jhankar2.png" alt="mypicture-for-dreambig">
+            <img src="images/jhankar2.png" alt="mypicture-for-dreambig">
         </div>
         <div class="half-width">
             <h2>Dream Big</h2>
