--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section class="container-top-banner container-height">
+    <nav class="nav-bar">
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#home">About Me</a></li>
+            <li><a href="#dreambig">Dream Big</a></li>
+            <li><a href="#expriences">Expriences</a></li>
+        </ul>
+    </nav>
+    <section class="container-top-banner container-height container-down" id="home">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-highlight">Nafis's</span> Portfolio</h1>
@@ -22,7 +30,7 @@
             <img src="images/jhankar.png" alt="mypicture-for-top">
         </div>
     </section>
-    <section class="container-dream-big container-height">
+    <section class="container-dream-big container-height container-down" id="dreambig">
         <div class="half-width">
             <img src="images/jhankar2.png" alt="mypicture-for-dreambig">
         </div>
@@ -33,7 +41,7 @@
             <a href="https://github.com/Nafis-Iqbal2k20" class="link-button" target="_blank">Download my resume</a>
         </div>
     </section>
-    <section class="expriences-area expriences-pad-hei">
+    <section class="expriences-area expriences-pad-hei" id="expriences">
         <h2>Expriences</h2>
         <div class="half-width expriences-box" id="border-full">
             <h2>Full stack web developer</h2>
